php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48227 NumberFormatter::format leaks memory
Submitted: 2009-05-10 20:05 UTC Modified: 2009-05-10 20:17 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: I18N and L10N related
PHP Version: 5.3.0RC2 OS:
Private report: No CVE-ID: None
 [2009-05-10 20:05 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
<?php

$x = new NumberFormatter('en_US', NumberFormatter::DECIMAL);
var_dump($x->format(''));

Expected result:
----------------
string(1) "0"

Actual result:
--------------
string(1) "0"
[Sun May 10 17:04:45 2009]  Script:  '../test.php'
/home/felipe/dev/php5/Zend/zend_vm_execute.h(1721) :  Freeing 0x09920A4C (1 bytes), script=../test.php
/home/felipe/dev/php5/Zend/zend_variables.c(120) : Actual location (location was relayed)
=== Total 1 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-05-10 20:17 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 16:00:01 2026 UTC